	12122,Dasik - FOOD should add temporary +30 ATK
	12123,Oil_and_Honey_Pastry - FOOD should add temporary +30 Flee
	12124,Various_colored_Rice_Cake - FOOD should add temporary +10 ATK +10 MATK
	7458,Fortune_Horn - it's a custom name yet
	12016,Speed_Increasing_Potion no bonus... Turbo Track race item
	12017,Speed_Decreasing_Potion no bonus... Turbo Track race item

	--
11/26
	* Changed the range of Blitz Beat and Falcon Assault to 5 [Skotlex]
	  (Vulture Eye bonus is now applied to these skills)
11/25
	* Updated skill ranges of Rogue and Priest skills, thanks to Komurka
	  for the information. [Skotlex]
	* Updated skill ranges of Assassin and Crusader skills, thanks to Komurka
	  for the information. [Skotlex]
11/24
	* Updated skill ranges of Hunter and Knight skills, thanks to Komurka for
	  the packet information. [Skotlex]
11/22
	* Lowered the required ammount of oridecon needed to craft gladiuses by 4, [MasterOfMuppets]
	  thanks to andz for pointing it out.
	* Updated the Range of Provoke, Bowling Bash. Retouched the range of Spear
	  Stab to be +2 of current weapon rather than 4. [Skotlex]
	* Reupdated the mob skill db (some mobs had mode change-target which is
	  obsolete now) [Skotlex]
	* Merged in Komurka's latest update to the mob_skill_db.txt [Skotlex]
	* Updated Firewall's knockback to 2. [Skotlex]
	* Updated the job bonuses for a bunch of jobs, thanks to Haplo for going
	  through the kRO job bonus db. [Skotlex]
	* Fixed g_bloody_butterfly - 1526, thanks to Zoc for finding it [Kayla]
11/21
	* Changed a Coma effect. Thanks to Luna. [Nexon]
	* Updated joblevel stat bonuses of Soullinker and Star Gladiator, thanks to reddozen [MasterOfMuppets]
	* Massive Reddozen's update of mix-food recipes, also made all Cooking Sets Produce 11; [Lupus]
	* Made more food/Potion items type 0, fixed typo [Lupus]
	* Updated rafflesia's mode to make it change-target. [Skotlex]
11/20
	* Changed all mixed food type to 0 - FOOD (healing items) [Lupus]