@@ -1,5 +1,8 @@
 Date	Added
 2005/11/26
+	* Added bonus2 bAddSkillBlown for adding a custom knockback value to a
+	  skill. Note that this knockback bonus is ADDED to whatever the default
+	  knockback of the skill is. [Skotlex]
 	* Fixed Soul Linker skills showing up on the tree for leveling up. [Skotlex]
 	* Probably fixed the crash in inter_guild_CharOffline [Skotlex]
 	* Modified the skill get range routine to correctly account for the attack
