@@ -609,7 +609,7 @@
 1361,Two_handed_Axe_,Two-handed Axe,4,55000,,2500,185,,1,2,279714,7,2,34,3,30,1,7,{}
 1362,Two_handed_Axe__,Two-handed Axe,4,55000,,2500,185,,1,0,279714,7,2,34,3,30,1,7,{}
 1363,Bloody_Axe,Bloody Axe,4,,10,4000,170,,1,0,279714,7,2,34,4,44,1,7,{ bonus bStr,10; bonus bSpeedRate,25; }
-1364,Great_Axe,Great Axe,4,,10,1800,187,,1,0,279714,7,2,34,4,44,1,7,{ bonus2 bAddEff,Eff_Stan,1500; }
+1364,Great_Axe,Great Axe,4,,10,1800,187,,1,0,279714,7,2,34,4,44,1,7,{ bonus2 bAddSkillBlow,42,5; bonus2 bAddEff,Eff_Stan,1500; }
 1365,Sabbath,Sabbath,4,,10,2300,120,,1,0,279714,7,2,34,4,44,1,7,{ bonus2 bWeaponComaRace,RC_Demon,50; bonus bAtkEle,Ele_Dark; bonus2 bCriticalAddRace,50,1; }
 1366,Light_Epsilon,Light Epsilon,4,,10,2300,180,,1,0,279714,7,2,34,4,44,1,7,{ bonus bAtkEle,Ele_Holy; skill 28,3; bonus2 bAddRace,RC_Demon,3; }
 1367,Slaughter,Slaughter,4,,10,2500,120,,1,0,279714,7,2,34,4,44,1,7,{ bonus bIgnoreDefRace,RC_Brute; bonus2 bWeaponComaRace,RC_Brute,50; bonus bAtkEle,Ele_Earth; }
@@ -1350,7 +1350,7 @@
 4209,Violy_Card,Violy Card,6,,10,10,,,,,,,,136,,,,,{ bonus3 bAutoSpell,318,1+4*(getskilllv(318)==5),10; }
 4210,Wanderer_Card,Wanderer Card,6,,10,10,,,,,,,,4,,,,,{ if(BaseClass == Job_Thief) bonus bFlee,20; if(isequipped(4172,4257,4230,4272)) goto THIEF_SET; bonus3 bAutoSpell,219,1,10; end; THIEF_SET: bonus bAgi,5; bonus bStr,5; bonus bAspdRate,5; bonus bSpeedRate,5; bonus2 bSPDrainValue,1,0; if(BaseClass == Job_Thief) bonus bNoGemStone,0; }
 4211,Vocal_Card,Vocal Card,6,,10,10,,,,,,,,4,,,,,{ bonus bMdef,3; if(isequipped(4021)) bonus bFlee,18; }
-4212,Bongun_Card,Bongun Card,6,,10,10,,,,,,,,136,,,,,{ bonus3 bAutoSpell,5,1,10; bonus2 bAddDamageByClass,1026,100; }
+4212,Bongun_Card,Bongun Card,6,,10,10,,,,,,,,136,,,,,{ bonus3 bAutoSpell,5,1,10; bonus2 bAddSkillBlow,5,5; bonus2 bAddDamageByClass,1026,100; }
 4213,Brilight_Card,Brilight Card,6,,10,10,,,,,,,,16,,,,,{ bonus2 bAddEffWhenHit,Eff_Silence,2000; }
 4214,Bloody_Murderer_Card,Bloody Murderer Card,6,,10,10,,,,,,,,2,,,,,{ bonus bCritAtkRate,10; bonus2 bCriticalAddRace,RC_Insect,7; }
 4215,Blazer_Card,Blazer Card,6,,10,10,,,,,,,,136,,,,,{ bonus2 bAddMonsterDropItemGroup,12,500; }
