@@ -915,6 +915,7 @@ int status_calc_pc(struct map_session_data* sd,int first)
 		+ sizeof(sd->addeff3)
 		+ sizeof(sd->addeff3_type)
 		+ sizeof(sd->skillatk)
+		+ sizeof(sd->skillblown)
 		+ sizeof(sd->add_def_classid)
 		+ sizeof(sd->add_def_classrate)
 		+ sizeof(sd->add_mdef_classid)
